s Signed-off-by: hertar <809298222@qq.com>

--- a/advanced/public/tpl/default/get_password.htm
+++ b/advanced/public/tpl/default/get_password.htm
@@ -11,8 +11,8 @@
                 <div class="grid_16">
 					<nav class="box_nav clearfix">
 						<ul>
-                			<li><a href="index.php?do=register">{$_lang['no_account_now_register']}</a></li>
-							<li><a href="index.php?do=login">{$_lang['has_account_now_login']}</a></li>
+                			<li><a href="index.php?r=index/register">{$_lang['no_account_now_register']}</a></li>
+							<li><a href="index.php?r=index/login">{$_lang['has_account_now_login']}</a></li>
 						</ul>
 					</nav>
 				</div>
