--- a/advanced/public/tpl/default/header_top.htm
+++ b/advanced/public/tpl/default/header_top.htm
@@ -205,7 +205,7 @@
 										<li class="clearfix"><a href="<!--{eval echo kekezu::build_space_url($uid);}-->" title="{$_lang['my_space']}" id="space"><div class="icon16 compass reverse"></div>{$_lang['my_space']}</a></li>
 										{/if}
 										<!--<li class="clearfix"><a href="index.php?do=user&view=message" title="{$_lang['website_msg']}"><div class="icon16 mail reverse"></div>{$_lang['website_msg']}</a></li>-->
-										<li class="clearfix"><a onclick="showWindow('out','index.php?do=logout');return false;" title="{$_lang['logout']}" href="index.php?do=logout">{$_lang['logout']}</a></li>
+										<li class="clearfix"><a onclick="showWindow('out','index.php?r=index/logout');return false;" title="{$_lang['logout']}" href="index.php?r=index/logout">{$_lang['logout']}</a></li>
 			                         </ul>
 			                    </div>
 			                    <!--用户登录后导航菜单 end-->
